crates/core/talkbank-parser-tests/tests/snapshots/parser_suite__snapshot_tests__parser_utterance_snapshot.snap
---
source: crates/talkbank-parser-tests/tests/parser_suite/snapshot_tests.rs
expression: "rows.join(\"\\n\\n\")"
---
[tree-sitter-parser] utterance
{
  "main": {
    "speaker": "CHI",
    "content": {
      "content": [
        {
          "type": "word",
          "raw_text": "I",
          "cleaned_text": "I",
          "content": [
            {
              "type": "text",
              "content": "I"
            }
          ]
        },
        {
          "type": "word",
          "raw_text": "want",
          "cleaned_text": "want",
          "content": [
            {
              "type": "text",
              "content": "want"
            }
          ]
        }
      ],
      "terminator": {
        "type": "period"
      }
    }
  }
}

[direct-parser] utterance
{
  "main": {
    "speaker": "CHI",
    "content": {
      "content": [
        {
          "type": "word",
          "raw_text": "I",
          "cleaned_text": "I",
          "content": [
            {
              "type": "text",
              "content": "I"
            }
          ]
        },
        {
          "type": "word",
          "raw_text": "want",
          "cleaned_text": "want",
          "content": [
            {
              "type": "text",
              "content": "want"
            }
          ]
        }
      ],
      "terminator": {
        "type": "period"
      }
    }
  },
  "dependent_tiers": [
    {
      "type": "Mor",
      "data": {
        "tier_type": "Mor",
        "items": [
          {
            "main": {
              "pos": "pro",
              "lemma": "I"
            }
          },
          {
            "main": {
              "pos": "v",
              "lemma": "want"
            }
          },
          {
            "main": {
              "pos": "n",
              "lemma": "cookie",
              "features": [
                "PL"
              ]
            }
          }
        ],
        "terminator": null
      }
    }
  ]
}
